Fix border radius bug numpad overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,6 @@ h3 {
   width: 90%;
   margin-bottom: 10%;
   margin-top: 7.5%;
-  border-radius: 1vw;
 }
 
 .calculator-numpad {
@@ -62,7 +61,6 @@ h3 {
   flex: 0 1 auto;
   flex-flow: row wrap;
   max-width: 100%;
-  border-radius: 1vw;
 }
 
 button {
